--- a/config.toml
+++ b/config.toml
@@ -1,21 +1,12 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://t4mag.netlify.app/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'T4 Mag'
 theme = "t4mag"
 
-[menu]
-  [[menu.main]]
-    name = "Home"
-    pre = "home"
-    url = "/"
-    weight = 1
-  [[menu.main]]
-    name = "Posts"
-    pre = "pen-tool"
-    url = "/posts/"
-    weight = 2
-  [[menu.main]]
-    name = "Tags"
-    pre = "tag"
-    url = "/tags/"
-    weight = 3
+[markup.goldmark.parser.attribute]
+block = true
+title = true
+
+[taxonomies]
+tag = "tags"
+category = "categories"
