--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,21 @@ languageCode = 'en-us'
 title = 'T4 Mag'
 theme = "t4mag"
 
-[markup.goldmark.parser.attribute]
-block = true
-title = true
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      hardWraps = true
+      unsafe = true
+      xHTML = true
+  [markup.highlight]
+    codeFences = true
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = false
+  [markup.tableOfContents]
+    endLevel = 4
+    ordered = false
+    startLevel = 2
 
 [taxonomies]
 tag = "tags"
