--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://t4mag.netlify.app/'
+baseURL = 'https://t4technow.tk/'
 languageCode = 'en-us'
 title = 'T4 Mag'
 theme = "t4mag"
