--- a/config.toml
+++ b/config.toml
@@ -22,3 +22,20 @@ theme = "t4mag"
 [taxonomies]
 tag = "tags"
 category = "categories"
+
+[related]
+  includeNewer = true
+  threshold = 85
+  toLower = false
+
+  [[related.indices]]
+  name = "tags"
+  weight = 80
+
+  [[related.indices]]
+  name = "keywords"
+  weight = 40
+
+  [[related.indices]]
+  name = "date"
+  weight = 10
